# absolute-tower-defence

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
assets/: bg.fs
game/: CMakeLists.txt
game/src/: main.c
libecs/: CMakeLists.txt
libecs/include/: libecs.h
libecs/src/: libecs.c  libecs_private.h
libv2d/: CMakeLists.txt
libv2d/include/: v2d.h  v2d_application.h  v2d_config.h  v2d_enums.h  v2d_export.h  v2d_main.h  v2d_structs.h  v2d_types.h
libv2d/src/: v2d_app_context.c  v2d_app_context.h  v2d_application.c  v2d_buffer.c  v2d_buffer.h  v2d_config.c  v2d_config.h  v2d_const.c  v2d_context.c  v2d_context.h  v2d_default.h  v2d_draw.c  v2d_draw.h  v2d_draw_context.c  v2d_draw_context.h  v2d_drawable.h  v2d_graphics_pipeline.c  v2d_graphics_pipeline.h  v2d_internal.h  v2d_run.c
libv2d/src/shaders/: v2d_default.frag  v2d_default.vert  v2d_default_frag.h  v2d_default_vert.h
